--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="de">
+<!DOCTYPE html>
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,9 @@
   <div class="import-export">
     <button onclick="exportData()">📁 Exportieren</button>
     <input type="file" onchange="importData(event)">
-  </div>  <section>
+  </div>
+
+  <section>
     <h2>ToDo-Liste</h2>
     <input type="text" id="todoInput" placeholder="Neue Aufgabe">
     <input type="datetime-local" id="todoReminder">
@@ -23,7 +26,9 @@
     </select>
     <button onclick="addTask('todo')">Hinzufügen</button>
     <ul id="todoList"></ul>
-  </section>  <section>
+  </section>
+
+  <section>
     <h2>Putzplan</h2>
     <input type="text" id="putzInput" placeholder="Neue Putzaufgabe">
     <input type="datetime-local" id="putzReminder">
@@ -34,14 +39,20 @@
     </select>
     <button onclick="addTask('putz')">Hinzufügen</button>
     <ul id="putzList"></ul>
-  </section>  <section class="calendar">
+  </section>
+
+  <section class="calendar">
     <h2>Kalender (nächste Termine)</h2>
     <ul id="calendarList"></ul>
-  </section>  <script src="script.js"></script>  <script>
+  </section>
+
+  <script src="script.js"></script>
+  <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js').then(() => {
         console.log('Service Worker registriert');
       });
     }
-  </script></body>
+  </script>
+</body>
 </html>
